2006-01-10 Dom Lachowicz <cinamod@hotmail.com>

	* Public functions: added g_return_XXX() sneeze-guards
	
2006-01-07 Dom Lachowicz <cinamod@hotmail.com>

	* librsvg.def: List of symbols that we export
	* Makefile.am: Use libtool's -export-symbols to try to only export
	the above symbols (on platforms where it's supported).
	
2005-12-31 Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-cairo.h: Bug 325357 - compile fails when rsvg-cairo.h is #included. (Callum McKenzie)
	
2005-12-20 Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: Mozilla-config fixes so that it works with more config scripts
	* rsvg-convert.c: Fix some GCC 4.0 build warnings (323936)
	
2005-12-10 Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-cairo.c: Remove
	* rsvg-convert.c: New utility called 'rsvg-convert'. Can convert a SVG to a PS, PDF, or PNG. Can accept
	SVG input from STDIN and output to STDOUT. Has a lot more flexibility and functionality than the old 'rsvg'
	program.
	* test-rsvg.c: Remove
	* rsvg.in: Reimplement 'rsvg' command-line utility in terms of the newer rsvg-convert
	
2005-12-09 Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-shapes.c: don't attempt to round courners at all in a rect unless dx > 0 && dy > 0	

2005-12-07 Ray Strode <rstrode@redhat.com>

	* rsvg-base.c: remove the push call that's more probably wrong and 
	clean up leaked viewbox list node (bug 323436)
	* rsvg-shapes.c: call finalize cleanup function of node parent class in 
	path_node and poly_node free functions (bug 323435)
	* rsvg-structure.c: Ditto
	* rsvg-structure.h: Ditto
	
2005-12-04 Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-defs.c: Plug a small mem leak found by Paolo Borelli (bug #322918)

2005-11-26 Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: Bump version number
	* *.c: C89 build fixes from jensgr@gmx.net (Jens Granseuer) - bug 322489